# Jiggler

./: .gitignore  .workspace_env  AI_A.py  Async_SQLite_Analytics_Processor.py  Asynchronous_Telemetry_Architecture.py  Automated_Asynchronous_Safety_Trip_Matrix.py  Autotuned_6D_Engine_Architecture.py  Binary_Protobuf_RPC_Server_Stream_Node.py  C++_skeleton.cpp  CONTRIBUTING.md  CRITIC_CONSTITUTION.md  Cargo.toml  Constellation_health_queries.py  CriticFeedback.rs  Curvaturestate_operatorconfig.rs  Design_sovereign_agent_protocol.md  DualRingTordialMatrix.__init__:  DualRingTordialMatrix.py  FramePolicy.rs  FullyAutonomousMatrix.py  GLYPH_HANDSHAKE_METADATA.md  GWICHIN_LANGUAGE_BASELINE.md  Getting_Started_Flow_The_Autonomous_Cosmic_Lock_Bootstrap.docx  Holonomy_Envelope_Variance.md  Hyper-Decay.md  Instinct_as_consciousness.docx  In‑memorycontextstore.rs  KernelContractLog.py  Lie_Algebraic_Variance.md  Linguist_Handshake_Metadata_Summary.json  Linguist_Handshake_v1.0.flame.json  Manifold_wire_protocol_pb2.py  Message‑levelschema.json  Monitored_Control_Grid_Terminal.py  Multi-Threaded_Stress_Test_Blueprint.py  Non‑destructive.json  NormalizedMessage.rs  OpenTordialAgentNode.py  Orchestrator.rs  Phase_Space_Trajectory.json  (+114 more)
API:POST/process/: request.json  response.json
Sovereign_agent/src/: TCPmesh_listener_reactor.rs  backend.rs  ha.rs  ic.rs  identity.rs  net.rs  sct.rs
Tordial-GS-_Manifold/: 6‑Cylinder_Boundary_code.md  Anchorresolver_Tordiallink.rs  Asynchronous_Engine_Remote_Command_Network_Array.py  Automated_Optimization_Engine.py  Binary_Protobuf_RPC_Server_Stream_Node.py  Concrete_Tordial–GS.md  CurvatureField.py  Design_cross_manifold_consensus.md  Dual-Ring_Matrix_Controller.py  Dual-Ring_Redundant_Failover_Loop.py  DualRingTordialMatrix.__init__:  Frame_Energy_Module.rs  GS_→_MACRO_FEEDBACK_LAW_(Tordial–GS_Closed_Loop).md  Global_Energy_Governor.py  LICENSE  Lifecycle-Managed_Control_Matrix.py  Live Asynchronous_Parameter_Controller_Interfacepython.py  ManagedTordialMatrix.py  Monitored_Control_Grid_Terminal.py  Numerical_Spectral_Solver_Tordial–GS_Manifold.md  OpenTordialAgentNode.py  Production-Grade_Dual-Loop_Controller.py  Production_Lifecycle_Framework.py  Production_Simulation_Controller.py  Python_immune_patch.py  Python_skeleton.py  Python_vs_Rust_analysis.py  README.md  Rehydratorstub.rs  Rust_skeleton.rust  SPEC_SYNTHESIS.json  SovereignEngine.propagateMetric  Sovereign_handshake.dart  Spectral_relaxation_torus.md  SystemState.py  TGS‑SPEC.md  TORDIAL-GS_MANIFOLD_SYSTEM.md  The_Tordial–Golod–Shafarevich_Manifold.md  Thread-Safe_Moving_Average_Pipeline.py  Time‑dependent_relaxation_PDE.md  (+59 more)
Tordial-GS-_Manifold/api/: manifold.py
Tordial-GS-_Manifold/benches/: criterion.rs
Tordial-GS-_Manifold/core/: Production_Serialization_Component_Pipeline.py  resonance_runner.py
Tordial-GS-_Manifold/examples/: stability_harness.rs
Tordial-GS-_Manifold/isst_toft_mesh/: Cargo.toml
Tordial-GS-_Manifold/lib/: intent_client.py  relational_mesh_bridge.dart  six_cylinder_grpc_client.dart
Tordial-GS-_Manifold/proto/: isst_toft.proto
Tordial-GS-_Manifold/pwc/: TopoCritic.py  append_pwc_substrate.py  critic.py  loop.py  planner.py  run_pwc_loop.py  types.py  walker.py
Tordial-GS-_Manifold/sovereign_engine/: ffi.dart
Tordial-GS-_Manifold/src/: contract_auditor.rs   glyph.rs  gs.rs  intent.rs  intent_tracker.rs  issttoft.rs  lib.rs  main.rs  rollback_engine.rs
Tordial-GS-_Manifold/topo_extractor/: __init__.py  code_graph.py  embedding_layer.py  extractor.py  gs_invariants.py  jed_trajectory.py  reasoning_engine.py  run_extractor.py  run_full_pipeline.py  run_pwc_loop.py  run_with_embeddings.py  telemetry_parser.py
api/: app.py  arc.py  manifold.py  ratelimit.py  run_manifold.py  tunnel.py
benches/: grid_sweep.rs  multinode.rs
core/: TGSAgent.py
core/agents/: logic.py  (+3 more)
example/: minimal_sovereign_app.dart
examples/: pi_r_integration.rs
flamevault_backup/: cold_storage_manifest.tar.manifest.json
isst-toft-inference-backend/: Cargo.toml  build.rs
isst_toft_mesh/: Cargo.toml  build.rs
lib/: intent_client.py  pubspec.yaml  relational_mesh_bridge.dart
maturin/: setuptools-rust
numpy.fft.fft2/: ifft2.rs
proto/: Atmospheric_Vector.proto  Biomass_Vector.proto  GS_band_transition_law.docx  Gibberlink_Vector.proto  Magnetic_Vector.proto  ManifoldTick.rs  Manifold_Integration_Logic.rs  Rust_Struct.rs  Rust_Structs.proto  Soil_Liquidity_Vector_L_c.proto  Unified_ManifoldTick.proto  Unified_Protobuf_Schema.rs  combined_manifold.proto  isst_toft.proto  issttoft.proto  issttoft_pb2.py  issttoft_pb2_grpc.py  manifold.proto
pwc/: critic.py  loop.py  planner.py  types.py  walker.py
sovereign_engine/: ffi.dart  ffi.rs
src/: Cargo.toml  Economic_Handler.rs  Rust_Synchronization_Handler.rs  Sap‑Flux_Handler.rs  SovereignInferenceService.rs  bin  build.rs  contract_auditor.rs  contract_envelope.rs  intent.rs  intent_engine.rs  issttoft.rs  main.py  main.rs  main.rs.broken  main.rs.damping_test  metrics.rs  model.rs  rollback_engine.rs  sovereign_operator.rs  tordial_holonomy.py
src/cd ~/: isst_toft_mesh
src/intent/: Exampleintents.py  SqliteIntentStore.rs  __init__.py  bootstrap.rs  engine.rs  heartbeat_step.rs  intent.py  intent_planner.py  mod.rs  storage.rs  test_vertical_slice.py  types.rs
src/proto/: issttoft.proto
tests/: integration_test.rs  perf-summary.json  run-performance.js
tools/: highmark.js  orion-align.js  relay-run.js  sentinel-verify.js
tordial_gs_py/: Cargo.toml
tordial_gs_py/src/: lib.rs
(+36 files in other folders)
