[package]
name = "tordial_gs_manifold"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
numpy = "0.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "tordial_gs_manifold"
path = "src/main.rs"
