cd ~/isst_toft_mesh

cat << 'EOF' > Cargo.toml
[package]
name = "isst_toft_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.10"
prost = "0.12"
async-stream = "0.3"
futures = "0.3"
futures-core = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }

[build-dependencies]
tonic-build = "0.10"

[lib]
name = "isst_toft_lib"
path = "src/main.rs"

[[bin]]
name = "isst_toft_mesh"
path = "src/bin/isst_toft_mesh.rs"

[[test]]
name = "grpc_harness"
path = "tests/grpc_harness.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
EOF
echo "🔒 Project manifest targets explicitly decoupled."

[package]
build = "build.rs"
name = "tordial_gs_manifold"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
numpy = "0.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1.18"
futures-core = "0.3.32"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "tordial_gs_manifold"
path = "src/main.rs"
