cat << 'EOF' > ~/isst_toft_mesh/Cargo.toml
[package]
name = "isst_toft_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.12", features = ["transport", "codegen"] }
prost = "0.13"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
rand = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
tonic-build = { version = "0.14.6", features = ["transport"] }
EOF
echo "✅ Cargo.toml features safely re-aligned to v0.14.6 specs."
