cat << 'EOF' > ~/isst_toft_mesh/Cargo.toml
[package]
name = "isst_toft_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.14.6", features = ["transport", "codegen"] }
prost = "0.14.3"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
rand = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
tonic-prost-build = "0.14.6"
EOF
echo "✅ Core runtime version mappings perfectly aligned to v0.14.6."
