cat << 'EOF' > Cargo.toml
[package]
name = "tordial_gs_manifold"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport", "codegen"] }
prost = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"
EOF
